# Context-Flow

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  GITHUB_FILES.md  LICENSE  QUICK_START.md  README.md  ROADMAP.md  demo.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md  performance_issue.md
.github/workflows/: ci.yml  release.yml
api/: main.py
bindings/: CMakeLists.txt  README.md
bindings/c/examples/: example.c
bindings/c/include/: contextflow.h
bindings/c/src/: contextflow.c
bindings/cpp/examples/: example.cpp
bindings/cpp/include/: contextflow.hpp
bindings/cpp/src/: contextflow_cpp.cpp
bindings/go/contextflow/: contextflow.go  go.mod
bindings/python/: setup.py
bindings/python/contextflow/: __init__.py  core.py  exceptions.py
bindings/rust/: Cargo.toml  build.rs
bindings/rust/src/: lib.rs
contextflow/: __init__.py  cli.py
contextflow/benchmarks/: benchmark_suite.py  performance_suite.py  results.json  run_benchmarks.py
contextflow/benchmarks/corpuses/samples/: sample.json  sample.py  sample.txt  sample.xml
contextflow/src/: advanced_compressor.py  chunked_processor.py  compressor.py  config.py  context_model.py  data_detector.py  decompressor.py  fast_ans.py  large_file_handler.py  lz77_fixed.py  neural_mixer.py  preprocessing.py  production_compressor.py  quantum_compressor.py  rle_fallback.py  simple_ans.py  tans_coder.py  tans_fixed.py  turbo_compressor.py
contextflow/tests/: quick_test.py  test_advanced.py  test_comprehensive.py  test_compression.py  test_turbo.py
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md
examples/: basic_demo.py  basic_usage.py  compression_demo.py  final_demo.py  simple_demo.py  streaming_example.py
kubernetes/charts/contextflow/: Chart.yaml  values.yaml
kubernetes/operator/: Dockerfile  go.mod
kubernetes/operator/deploy/: crd.yaml
monitoring/grafana/dashboards/: contextflow-dashboard.json
monitoring/prometheus/: prometheus.yml
