[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextflow"
version = "1.0.0"
description = "Advanced hybrid lossless compression system"
readme = "README.md"
authors = [
    {name = "ContextFlow Contributors"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: System :: Archiving :: Compression",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
benchmark = [
    "zstandard>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/contextflow"
Documentation = "https://contextflow.readthedocs.io"
Repository = "https://github.com/yourusername/contextflow"
Issues = "https://github.com/yourusername/contextflow/issues"
Changelog = "https://github.com/yourusername/contextflow/blob/main/CHANGELOG.md"

[project.scripts]
contextflow = "contextflow.cli:main"

[tool.setuptools]
packages = ["contextflow", "contextflow.src", "contextflow.tests", "contextflow.benchmarks"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["contextflow/tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra -v --cov=contextflow --cov-report=term-missing"

[tool.coverage.run]
source = ["contextflow"]
omit = ["*/tests/*", "*/benchmarks/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
]